--- a/style.css
+++ b/style.css
@@ -23,11 +23,12 @@ body{
     "main"
     "footer"
     ;
+    
 }
 
 /*header*/
 header{
-    box-shadow: 15px 4px 10px 10px #00000040;
+    box-shadow: 15px 4px 20px 20px #FEB4FF50;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -105,14 +106,20 @@ main{
 }
 .cardTestimonies{
     border-radius: 25px;
-    background-color: #7bffff46;
-    height: 390 px;
+    background: rgb(254,180,255);
+    background: linear-gradient(186deg, rgba(254,180,255,0.5047268907563025) 0%, rgba(123,255,255,0.49352240896358546) 100%);
     width: 200px;
     margin: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     box-shadow: 15px 4px 20px 20px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    transition: all 0.4s linear;    
+}
+.cardTestimonies:hover{
+    transform: scale(1.15,1.15);
+    transition: all 0.4s linear;
 }
 .cardTestimonies__name{
    padding-top: 10px;
@@ -283,10 +290,18 @@ button{
     height: 50px;
     font-size: 30px;
     border-width: 0 10px ;
-    border-radius: 10px;
+    border-radius: 8px;
+    background-color: #7bffff;
+    border-color: #7bffff;
+    color: black;
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+button:hover{
+    color: white;
     border-color: #FEB4FF;
     background-color: #FEB4FF;
-    color: white;
+    transition: all 0.4s ease;
 }
 
 
