--- a/style.css
+++ b/style.css
@@ -50,35 +50,32 @@ main{
 }
 
 /*Main-home*/
-#presentationBanner{
-    display: flex; 
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap-reverse;   
-}
-#presentationBanner div{
+.presentationBannerdiv{
     display: flex;
     flex-direction: column;
-    width: 40%;
     align-items: center;
+    justify-content: center;
 }
 .presentationBanner__image{
     padding-top: 35px;
-    width: 350px;
+    width: 35vw;
 }
 .presentationBanner__titule{
     padding-top: 20px;
     font-weight: 300;
     font-size: 50px;
     text-align: center;
-    
 }
 .presetnationBanner__subtitule{
-    padding-top: 10px;
+    padding-top: 10px 0px;
     /* width: 500px; */
     text-align: center;
     font-weight: 200;
+}
+#testimonies{
+    margin-top: 15vw;
+    background-color:rgba(254,180,255,0.5047268907563025);
+    box-shadow: 15px 4px 20px 20px rgba(254,180,255,0.5047268907563025);    
 }
 #testimonies__titule{
     height: 100px;
@@ -101,7 +98,7 @@ main{
     border-radius: 25px;
     background: rgb(254,180,255);
     background: linear-gradient(186deg, rgba(254,180,255,0.5047268907563025) 0%, rgba(123,255,255,0.49352240896358546) 100%);
-    width: 200px;
+    width: 230px;
     margin: 10px;
     display: flex;
     flex-direction: column;
@@ -303,7 +300,7 @@ button:hover{
 
 /*footer*/
 footer{
-    padding-top: 50px;
+    padding-top: 10vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -312,4 +309,15 @@ footer{
 .footerCopyrights{
     display: flex;
     padding: 10px 0px 20px 0px;
+}
+
+
+/* Medias quieris */
+@media only screen and (max-width: 768px) {
+    .presentationBanner__image{
+        width: 65vw;
+    }
+    .presentationBanner__titule{
+        font-size: 40px;
+    }
 }
