--- a/style.css
+++ b/style.css
@@ -128,53 +128,57 @@ main{
 
 /*Main-Petsitter*/
 #petsitterBanner{
-    height: 500px;
+    height:fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content:flex-start;
     background-image: url(./images/banner1.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
 }
+
 .petsitterBanner__titule{
+    padding-top: 15vw;
     font-size: 50px;
     text-shadow: 2px 4px 10px white;
 }
 .petsitterBanner__subtitule{
-    padding-top: 10px;
-    width: 500px;
+    padding-bottom: 10vw;
+    width: 70vw;
     text-align: center;
     font-weight: 200;
     text-shadow: 1px 1px 10px white;
 }
 #petsitterForm{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
+    height: fit-content ;
 }
 
 /* Main-Dogtrainig */
 #dogtrainigBanner{
-    height: 500px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+    height: 40vw;
     background-image: url(./images/banner4.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
 }
-.dogtrainigBanner__titule{
+
+.dogtrainigBannerdiv{
+    padding: 5vw 0 5vw 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.dogtrainigBanner__titule{  
     text-align: center;
     font-size: 50px;
     text-shadow: 2px 4px 10px white;
 }
 .dogtrainigBanner__subtitule{
     padding-top: 10px;
-    width: 500px;
     text-align: center;
     font-weight: 200;
     text-shadow: 1px 1px 10px white;
@@ -188,7 +192,7 @@ main{
 
 /* Main-Workwithus */
 #workwithusBanner{
-    height: 500px;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -201,6 +205,7 @@ main{
 }
 .workwithusBanner__titule{
     font-size: 50px;
+    text-align: center;
     text-shadow: 2px 4px 10px white;
     background-color: rgba(255, 255, 255, 0.289);
 }
@@ -223,13 +228,13 @@ main{
 /* Main-About */
 
 #aboutusBanner{
-    height: 500px;
+    height: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
     background-image: url(./images/banner3.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     flex-wrap: wrap;
 }
@@ -271,12 +276,19 @@ a{
     color: #0b0c10;
 }
 .formBasic{
-    padding: 10px 20px;
+    padding-top: 10px;
     display: flex;
     flex-direction: column;
 }
+.formBasic input{
+    border-radius: 8px;
+    border: none;
+    background: rgb(254,180,255);
+    background: linear-gradient(186deg, rgba(254,180,255,0.5047268907563025) 0%, rgba(123,255,255,0.49352240896358546) 100%);
+}
 .formBasic label{
     padding-left: 10px;
+    padding-bottom: 3px;
     font-size: 20px;
 }
 button{
@@ -284,11 +296,17 @@ button{
     font-size: 30px;
     border-width: 0 10px ;
     border-radius: 8px;
-    background-color: #7bffff;
-    border-color: #7bffff;
+    background-color: #7bffff7e;
+    border-color: #7bffff7e;
     color: black;
     cursor: pointer;
     transition: all 0.4s ease;
+}
+.formbutton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
 }
 button:hover{
     color: white;
@@ -300,7 +318,7 @@ button:hover{
 
 /*footer*/
 footer{
-    padding-top: 10vw;
+    padding-top: 4vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -314,10 +332,17 @@ footer{
 
 /* Medias quieris */
 @media only screen and (max-width: 768px) {
+    /* home */
     .presentationBanner__image{
         width: 65vw;
     }
     .presentationBanner__titule{
         font-size: 40px;
     }
+    /* footer */
+    footer{
+        padding-top: 10vw;
+    }
+    #dogtrainigBanner{
+        height: fit-content;
 }
