--- a/scss/general/typography.scss
+++ b/scss/general/typography.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Adigiana Extreme;
-    src: url(../../fonts/adigiana_extreme-webfont.woff2);
+    src: url(../../fonts/AdigianaExtreme.ttf);
 }
 *{font-family: Adigiana Extreme;
     color: #0b0c10;
