--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -1,5 +1,6 @@
 footer{
-    padding-top: 4vw;
+    background-color: $primarycolor;
+    padding-top: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
