--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -1,3 +1,4 @@
+
 .presentationBannerdiv{
     display: flex;
     flex-direction: column;
@@ -5,7 +6,6 @@
     justify-content: center;
 }
 .presentationBanner__image{
-    padding-top: 35px;
     width: 35vw;
 }
 .presentationBanner__titule{
@@ -21,9 +21,8 @@
     font-weight: 200;
 }
 #testimonies{
-    margin-top: 15vw;
-    background-color:rgba(254,180,255,0.5047268907563025);
-    box-shadow: 15px 4px 20px 20px rgba(254,180,255,0.5047268907563025);
+    background-color:rgb(254, 180, 255);
+    // box-shadow: 15px 4px 20px 20px rgba(254,180,255,0.5047268907563025);
     #testimonies__titule{
         height: 100px;
         display: flex;
@@ -45,8 +44,9 @@
     flex-wrap: wrap;
     .cardTestimonies{
         border-radius: 25px;
-        background: rgb(254,180,255);
-        background: linear-gradient(186deg, rgba(254,180,255,0.5047268907563025) 0%, rgba(123,255,255,0.49352240896358546) 100%);
+        background-color: white;
+        // background: #feb4ff;
+        // background: linear-gradient(186deg, rgba(254,180,255,0.5047268907563025) 0%, rgba(123,255,255,0.49352240896358546) 100%);
         width: 230px;
         margin: 10px;
         display: flex;
@@ -73,5 +73,10 @@
         font-size: 14px;
         padding: 0px 10px;
         text-align: center;
-    }
+    }  
+}
+.knowAboutUsButton{
+    padding: 50px;
+    display: flex;
+    justify-content: center;
 }
