--- a/scss/general/waves.scss
+++ b/scss/general/waves.scss
@@ -1,11 +1,11 @@
 .waveup{
-    background-image: url(../../images/wave-up.svg);
+    background-image: url(../images/wave-up.svg);
     height: 100px;
     background-size: cover;
 }
 
 .wavedown{
-    background-image: url(../../images/wave-dow.svg);
+    background-image: url(../images/wave-dow.svg);
     height: 100px;
     background-size: cover;
 }
