--- a/scss/pages/dog-trainig.scss
+++ b/scss/pages/dog-trainig.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 600px;
-    background-image: url(../../images/banner4.jpg);
+    background-image: url(../images/banner4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center 0px;
