--- a/scss/pages/pet-sitter.scss
+++ b/scss/pages/pet-sitter.scss
@@ -21,7 +21,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 50vw;
-    background-image: url(../../images/banner1.jpg);
+    background-image: url(../images/banner1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center 10%;
