--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -4,22 +4,28 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    .presentationBanner__image{
+        width: 85%;
+    }
+    .presentationBanner__titule{
+        padding-top: 20px;
+        font-weight: 300;
+        font-size: 60px;
+        text-align: center;
+    }
+    
+    .presetnationBanner__subtitule{
+        margin: 25px;
+        text-align: center;
+        font-weight: 200;
+    }
+    .button_primary{
+        margin: 25px;
+    }
 }
-.presentationBanner__image{
-    width: 35vw;
-}
-.presentationBanner__titule{
-    padding-top: 20px;
-    font-weight: 300;
-    font-size: 50px;
-    text-align: center;
-}
-.presetnationBanner__subtitule{
-    padding-top: 10px 0px;
-    /* width: 500px; */
-    text-align: center;
-    font-weight: 200;
-}
+
+
+
 #testimonies{
     background-color:rgb(254, 180, 255);
     // box-shadow: 15px 4px 20px 20px rgba(254,180,255,0.5047268907563025);
@@ -29,9 +35,10 @@
         align-items: center;
         justify-content: center;
         h2{
-            font-size: 35px;
+            font-size: 50px;
             font-weight: 200;
             text-align: center;
+            text-shadow: white;
         }
     }    
     
@@ -70,7 +77,7 @@
         width: 85%;
     }
     .cardTestimonies__text{
-        font-size: 14px;
+        font-size: 17px;
         padding: 0px 10px;
         text-align: center;
     }  
