--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,7 +1,9 @@
 //general
 @import "./general/typography.scss";
 @import "./general/reset.scss";
-@import "./general/colors.scss";
+@import "./general/positionhepl.scss";
+@import "./general/mixins.scss";
+@import "./general/colors.scss";    
 @import "./general/buttons.scss";
 @import "./general/forms.scss";
 @import "./general/waves.scss";
