--- a/scss/general/buttons.scss
+++ b/scss/general/buttons.scss
@@ -1,7 +1,7 @@
 button{
+    padding: 0 20px;
     height: 50px;
     font-size: 30px;
-    border-width: 0 10px ;
     border-radius: 8px;
     background-color: #7bffff7e;
     border-color: #7bffff7e;
@@ -20,6 +20,7 @@ button:hover{
     border-color: #FEB4FF;
     background-color: #FEB4FF;
     transition: all 0.4s ease;
+    border: width 0;;
     a{
         color: $background;
         transition: all 0.8s ease;
