--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -1,5 +1,6 @@
 
 .presentationBannerdiv{
+    background-color: $background;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,7 +36,7 @@
         align-items: center;
         justify-content: center;
         h2{
-            font-size: 50px;
+            font-size: 43px;
             font-weight: 200;
             text-align: center;
             text-shadow: white;
@@ -51,7 +52,7 @@
     flex-wrap: wrap;
     .cardTestimonies{
         border-radius: 25px;
-        background-color: white;
+        background-color: $background;
         // background: #feb4ff;
         // background: linear-gradient(186deg, rgba(254,180,255,0.5047268907563025) 0%, rgba(123,255,255,0.49352240896358546) 100%);
         width: 230px;
@@ -83,6 +84,7 @@
     }  
 }
 .knowAboutUsButton{
+    background-color: $background;
     padding: 50px;
     display: flex;
     justify-content: center;
