--- a/scss/pages/work-with-us.scss
+++ b/scss/pages/work-with-us.scss
@@ -16,6 +16,7 @@
 }
 
 #workwithusForm{
+    background-color: $background;
     margin: 10px 40px 0px 40px;
     .workwithusBanner__titule{
         font-size: 50px;
