--- a/scss/pages/dog-trainig.scss
+++ b/scss/pages/dog-trainig.scss
@@ -13,7 +13,7 @@
     }
     .dogtrainigBanner__titule{  
         text-align: center;
-        font-size: 50px;
+        font-size: 60px;
         text-shadow: 2px 4px 10px white;
     }
     .dogtrainigBanner__subtitule{
@@ -24,38 +24,51 @@
     }
 }
 
-.align-items-center{
-    // padding: 5vw 0 5vw 0;
-    display: flex !important;
-    flex-direction: column !important;
-    justify-content: center !important;
-    align-items: center !important;    
-}
 
 #dogtraininggiff{
+    background-color: $background;
+    h2{
+        font-size: 40px;
+        text-align: center;
+    }
     img{
         padding: 20px 0;
-        width: 85%;;
+        width: 60%;;
         border-radius: 60px;
+        @include mediaquery_mobile(){
+            width: 85%;
+        }
     }   
 }
 
 
 #dogtrainingCarrusel{
     background-color: $primarycolor;
+    h2{
+        font-size: 40px;
+        text-align: center;
+    }
     .carousel{
         border-radius: 60px;
         overflow: hidden;
+        width: 80%;
+        @include mediaquery_mobile(){
+            width: 85%;
+        }
     }
     img{
         padding: 20px 0;
-        width: 85%;
+        width: 60%;
         border-radius: 60px;
+        @include mediaquery_mobile(){
+            width: 85%;
+        }
     }   
 }
 
 
 #dogtrainingVermas{
+    background-color: $background;
     height: 100px;
     display: flex;
     justify-content: center;
