--- a/scss/pages/pet-sitter.scss
+++ b/scss/pages/pet-sitter.scss
@@ -4,9 +4,14 @@
     flex-direction: column;
     align-items: center;
     justify-content:flex-start;
+    background-color: $background;
     .petsitterBanner__titule{
-        font-size: 50px;
+        font-size: 60px;
         text-shadow: 2px 4px 10px white;
+        margin-bottom: 30px;
+        @include mediaquery_mobile(){
+            font-size: 50px;
+        }
     }
     .petsitterBanner__subtitule{
         width: 70vw;
@@ -26,16 +31,21 @@
     background-size: cover;
     background-position: center 10%;
     background-attachment: fixed;
+    @include mediaquery_mobile(){
+        height: 100vw;
+    }
     img{
         width: 100%;
     }
 }
 
 #petsitterForm{
-    padding: 0 15px 0 15px;
+    background-color: $background;
     height: fit-content;
+    
     h2{
         text-align: center;
+        font-size: 30px;
     }
 }
 
