--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,9 @@ footer {
     text-align: center;
     font-size: 60px;
     text-shadow: 2px 4px 10px white; }
+    @media (max-width: 768px) {
+      #dogtrainigBanner .dogtrainigBanner__titule {
+        font-size: 50px; } }
   #dogtrainigBanner .dogtrainigBanner__subtitule {
     padding-top: 10px;
     text-align: center;
@@ -282,7 +285,7 @@ footer {
   align-items: center; }
 
 #workwithusBanner {
-  height: 600px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
