--- a/scss/general/forms.scss
+++ b/scss/general/forms.scss
@@ -7,7 +7,7 @@
 .formBasic input{
     border-radius: 8px;
     border: none;
-    background: rgb(254,180,255);
+    background: $primarycolor;
     background: linear-gradient(186deg, rgba(254,180,255,0.5047268907563025) 0%, rgba(123,255,255,0.49352240896358546) 100%);
 }
 .formBasic label{
