--- a/scss/pages/work-with-us.scss
+++ b/scss/pages/work-with-us.scss
@@ -21,13 +21,13 @@
     .workwithusBanner__titule{
         font-size: 50px;
         text-align: center;
-        text-shadow: 2px 4px 10px white;
+        text-shadow: 2px 4px 10px $background;
     }
     .workwithusBanner__subtitule{
         padding-top: 10px;
         margin-bottom: 40px;
         text-align: center;
         font-weight: 200;
-        text-shadow: 1px 1px 10px white;
+        text-shadow: 1px 1px 10px $background;
     }
 }
