--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,17 @@
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: white !important; } }
+
 @font-face {
   font-family: Adigiana Extreme;
   src: url(../fonts/adigiana_extreme-webfont.woff2); }
 
 * {
   font-family: Adigiana Extreme;
-  color: #0b0c10; }
+  color: black; }
 
 a {
-  color: #0b0c10; }
+  color: black; }
 
 * {
   margin: 0;
@@ -21,7 +25,7 @@ a {
   justify-content: center !important;
   align-items: center !important; }
 
-button {
+.button_primary {
   padding: 0 20px;
   height: 50px;
   font-size: 30px;
@@ -38,13 +42,13 @@ button {
   align-items: center;
   height: 150px; }
 
-button:hover {
+.button_primary:hover {
   color: white;
-  border-color: #FEB4FF;
-  background-color: #FEB4FF;
+  border-color: #feb4ff;
+  background-color: #feb4ff;
   transition: all 0.4s ease;
   border: width 0; }
-  button:hover a {
+  .button_primary:hover a {
     color: white;
     transition: all 0.8s ease; }
 
@@ -67,16 +71,21 @@ button:hover {
 .waveup {
   background-image: url(../images/wave-up.svg);
   height: 100px;
-  background-size: cover; }
+  background-size: cover;
+  margin-top: -10px;
+  margin-bottom: -3px; }
 
 .wavedown {
   background-image: url(../images/wave-dow.svg);
   height: 100px;
-  background-size: cover; }
+  background-size: cover;
+  margin-top: -3px;
+  margin-bottom: -4px; }
 
 body {
   display: grid;
-  grid-template-areas: "header" "main" "footer"; }
+  grid-template-areas: "header" "main" "footer";
+  overflow-x: hidden !important; }
 
 header {
   grid-area: header; }
@@ -108,23 +117,29 @@ footer {
     display: flex;
     padding: 10px 0px 20px 0px; }
 
+#presentationBanner {
+  overflow: hidden; }
+
 .presentationBannerdiv {
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  overflow: hidden; }
   .presentationBannerdiv .presentationBanner__image {
     width: 85%; }
   .presentationBannerdiv .presentationBanner__titule {
     padding-top: 20px;
     font-weight: 300;
     font-size: 60px;
-    text-align: center; }
+    text-align: center;
+    overflow: hidden; }
   .presentationBannerdiv .presetnationBanner__subtitule {
     margin: 25px;
     text-align: center;
-    font-weight: 200; }
+    font-weight: 200;
+    overflow: hidden; }
   .presentationBannerdiv .button_primary {
     margin: 25px; }
 
@@ -183,7 +198,8 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  background-color: white; }
+  background-color: white;
+  overflow: hidden; }
   #petsitterBanner .petsitterBanner__titule {
     font-size: 60px;
     text-shadow: 2px 4px 10px white;
@@ -228,13 +244,15 @@ footer {
   background-image: url(../images/banner4.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center 0px; }
+  background-position: center 0px;
+  overflow: hidden; }
   #dogtrainigBanner img {
     width: 100%; }
   #dogtrainigBanner .dogtrainigBanner__titule {
     text-align: center;
     font-size: 60px;
-    text-shadow: 2px 4px 10px white; }
+    text-shadow: 2px 4px 10px white;
+    overflow: hidden; }
     @media (max-width: 768px) {
       #dogtrainigBanner .dogtrainigBanner__titule {
         font-size: 50px; } }
@@ -242,7 +260,8 @@ footer {
     padding-top: 10px;
     text-align: center;
     font-weight: 200;
-    text-shadow: 1px 1px 10px white; }
+    text-shadow: 1px 1px 10px white;
+    overflow: hidden; }
 
 #dogtraininggiff {
   background-color: white; }
@@ -258,7 +277,8 @@ footer {
         width: 85%; } }
 
 #dogtrainingCarrusel {
-  background-color: #feb4ff; }
+  background-color: #feb4ff;
+  margin-bottom: 6px; }
   #dogtrainingCarrusel h2 {
     font-size: 40px;
     text-align: center; }
