--- a/scss/general/waves.scss
+++ b/scss/general/waves.scss
@@ -2,10 +2,14 @@
     background-image: url(../images/wave-up.svg);
     height: 100px;
     background-size: cover;
+    margin-top: -10px;
+    margin-bottom: -3px;
 }
 
 .wavedown{
     background-image: url(../images/wave-dow.svg);
     height: 100px;
     background-size: cover;
+    margin-top: -3px;
+    margin-bottom: -4px;
 }
