--- a/scss/pages/dog-trainig.scss
+++ b/scss/pages/dog-trainig.scss
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center 0px;
+    overflow: hidden;
     // background-attachment: fixed;   
     img{
         width:100%;
@@ -14,7 +15,8 @@
     .dogtrainigBanner__titule{  
         text-align: center;
         font-size: 60px;
-        text-shadow: 2px 4px 10px white;
+        text-shadow: 2px 4px 10px $background;
+        overflow: hidden;
         @include mediaquery_mobile(){
             font-size: 50px;
         }
@@ -23,7 +25,8 @@
         padding-top: 10px;
         text-align: center;
         font-weight: 200;
-        text-shadow: 1px 1px 10px white;
+        text-shadow: 1px 1px 10px $background;
+        overflow: hidden;
     }
 }
 
@@ -47,6 +50,7 @@
 
 #dogtrainingCarrusel{
     background-color: $primarycolor;
+    margin-bottom: 6px;
     h2{
         font-size: 40px;
         text-align: center;
