--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -1,10 +1,13 @@
-
+#presentationBanner{
+    overflow: hidden;
+}
 .presentationBannerdiv{
     background-color: $background;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
     .presentationBanner__image{
         width: 85%;
     }
@@ -13,12 +16,14 @@
         font-weight: 300;
         font-size: 60px;
         text-align: center;
+        overflow: hidden;
     }
     
     .presetnationBanner__subtitule{
         margin: 25px;
         text-align: center;
         font-weight: 200;
+        overflow: hidden;
     }
     .button_primary{
         margin: 25px;
