--- a/scss/pages/pet-sitter.scss
+++ b/scss/pages/pet-sitter.scss
@@ -5,9 +5,10 @@
     align-items: center;
     justify-content:flex-start;
     background-color: $background;
+    overflow: hidden;
     .petsitterBanner__titule{
         font-size: 60px;
-        text-shadow: 2px 4px 10px white;
+        text-shadow: 2px 4px 10px $background;
         margin-bottom: 30px;
         @include mediaquery_mobile(){
             font-size: 50px;
@@ -17,7 +18,7 @@
         width: 70vw;
         text-align: center;
         font-weight: 200;
-        text-shadow: 1px 1px 10px white;
+        text-shadow: 1px 1px 10px $background;
     }
 }
 
